# fishspeech-mcp-server

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.claude/skills/commit/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: audio.rs  http.rs  main.rs  mcp.rs  synthesize.rs  voice.rs
