[package]
name = "fishspeech-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Text-to-speech MCP server powered by Fish Speech 1.5"
license = "MIT"
repository = "https://github.com/nizovtsevnv/fishspeech-mcp-server"
exclude = [".cargo/", ".claude/", ".github/", ".envrc", "AGENTS.md", "flake.nix", "flake.lock", "scripts/"]

[features]
cuda = ["fish_speech_core/cuda"]

[dependencies]
fish_speech_core = { git = "https://github.com/EndlessReform/fish-speech.rs", rev = "e5a172a" }
candle-core = "0.8"
candle-nn = "0.8"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "tokio", "ureq"] }
tokenizers = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
opus = "0.3"
ogg = "0.9"

[[bin]]
name = "encode-voice"
path = "src/bin/encode_voice.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
